# Tinix-Shell

./: .gitmodules  Building An Operating System for x64-based Computers Using Rust-lang.md  Cargo.toml  HLBD.uxf  README.md  Tinix.planner  create_disk
.cargo/: config.toml
src/: lib.rs  main.rs  shell.rs  tests.rs
src/tinix/: Cargo.toml  lib.rs
src/tinix/gfx/: mod.rs  vga.rs
src/tinix/interrupts/: gdt.rs  idt.rs  mod.rs  pic.rs  pit.rs
src/tinix/io/: serial.rs  terminal.rs
src/tinix_kernal/: Cargo.toml  lib.rs
src/tinix_kernal/gfx/: vga.rs
src/tinix_kernal/interrupts/: idt.rs  mod.rs
src/tinix_kernal/io/: mod.rs  printer.rs  serial.rs  terminal.rs
src/tvm/: instruction_strategies.rs  mod.rs  vm_state.rs
