[package]
name = "tinix"
version = "0.1.0"
authors = ["npex42 <npex42@gmail.com>"]
edition = "2018"
default-run = "tinix_shell"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "tinix_shell"
path = "src/main.rs"



[dependencies]
bootloader = "0.9.8"
spin = "0.5.2"
volatile = "0.2.6"
x86_64 = "0.13.2"
uart_16550 = "0.2.0"