[package]
name = "tinix_shell"
version = "0.1.0"
authors = ["npex42 <npex42@gmail.com>"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.8"
spin = "0.5.2"
volatile = "0.2.6"
x86_64 = "0.13.2"
uart_16550 = "0.2.0"
linked_list_allocator = "0.8.0"

tinix = {path = "tinix-core"}
tinix_alloc = {path = "tinix-alloc"}

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"
]
test-success-exit-code = 33         # (0x10 << 1) | 1



# [[test]]
# name = "stack_overflow"
# harness = false
